--- a/email-classifier.backend/.env.example
+++ b/email-classifier.backend/.env.example
@@ -4,3 +4,4 @@ OPENAI_DEFAULT_MODEL=gpt-5-nano-2025-08-07
 MONGO_URI=mongodb://localhost/email-classifier
 REDIS_HOST=localhost
 REDIS_PORT=6379
+REDIS_PASSWORD=
