--- a/email-classifier.frontend/package.json
+++ b/email-classifier.frontend/package.json
@@ -13,13 +13,17 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/image": "^1.11.0",
     "@nuxt/ui": "^4.0.0",
+    "@nuxtjs/mdc": "^0.17.4",
     "eslint": "^9.36.0",
     "nuxt": "^4.1.2",
+    "nuxt-lottie": "^1.0.5",
     "typescript": "^5.9.2",
     "vue": "^3.5.21",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "sass-embedded": "^1.93.2"
   }
 }
