feat: adicionar suporte a CORS e validação de ID de email
- feat: configurar CORS com origem definida no .env
- feat: adicionar validação de ID de email na busca
- style: atualizar documentação de prompts no serviço OpenAI

--- a/email-classifier.backend/.env.example
+++ b/email-classifier.backend/.env.example
@@ -5,3 +5,4 @@ MONGO_URI=mongodb://localhost/email-classifier
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+CORS_ORIGIN=http://localhost:3000
