refact: renomear PORT para BACK_PORT e atualizar referências
- refact: alterar variável PORT para BACK_PORT no arquivo .env.example
- refact: atualizar interface ProcessEnv para incluir BACK_PORT
- refact: modificar a configuração do servidor para usar BACK_PORT

--- a/email-classifier.backend/.env.example
+++ b/email-classifier.backend/.env.example
@@ -1,4 +1,4 @@
-PORT=3001
+BACK_PORT=3001
 OPENAI_API_KEY=sk-<your_openai_key>
 OPENAI_DEFAULT_MODEL=gpt-5-nano-2025-08-07
 MONGO_URI=mongodb://localhost/email-classifier
